kernel/tests/typing/invalid/wrong_argument_type_1.ck
data T : Type where
data U : Type where

def a (f : T -> U) (x : U) : U := f x